--- a/index.html
+++ b/index.html
@@ -4,7 +4,133 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>МANSORY</title>
-    <link rel="stylesheet" href="stail/stail.css">
+    <style>
+        body{
+    background-color: rgb(41, 40, 40);
+}
+
+
+
+.si1{
+    position: absolute;
+    left: 80px;
+    top: 35px;
+    font-size: 30px;
+}
+
+.si2{
+    position: absolute;
+    left: 330px;
+    top: 35px;
+    font-size: 30px;
+}
+
+.si3{
+    position: absolute;
+    left: 1000px;
+    top: 35px;
+    font-size: 30px;
+}
+
+.si4{
+    position: absolute;
+    left:   1250px;
+    top: 35px;
+    font-size: 30px;
+}
+.tx1{
+    font-size: 60px;
+    color: white;
+    position: absolute;
+    left: 580px;
+    top: -50px;
+}
+
+a{
+    text-decoration: dashed;
+    color: rgb(203, 187, 187);
+}
+
+.car1{
+    width: 100%;
+
+}
+
+.tx2{
+    color: white;
+    font-size: 70px;
+    position: absolute;
+    top: 100px;
+}
+.cno1{
+    height: 50px;
+    border-radius: 10px;
+    background-color: rgb(108, 228, 239);
+    font-size: 20px;
+    width: 200px;
+    position: absolute;
+    left: 40px;
+    top: 370px;
+}
+
+.ram1{
+
+    border: 3px solid;
+    width: 1200px;
+    height: 300px;
+    position: absolute;
+    left: 150px;
+    top: 1000px;
+}
+
+.tx4{ 
+    color: white;
+    font-size: 40px;
+    position: absolute;
+    left: 340px;
+}
+
+.tx5{
+    color: white;
+    font-size: 30px;
+    position: absolute;
+    left: 260px;
+    top: 80px;
+}
+
+.tag1{
+    color: white;
+    background-color: rgb(41, 40, 40);
+    width: 200px;
+    position: absolute;
+    left: 140px;
+    top: 200px ;
+}
+
+.tag2{
+    color: white;
+    background-color: rgb(41, 40, 40);
+    width: 200px;
+    position: absolute;
+    left: 400px;
+    top: 200px ;
+}
+
+.cno2{
+    width: 100px;
+    background-color: rgb(108, 228, 239);
+    position: absolute;
+    left: 650px;
+    top: 200px ;
+}
+
+video{
+    width: 80%;
+    position: absolute;
+    left: 150px;
+    top: 1300px;
+}
+    </style>
 </head>
 <body>
         <div>
