--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ video{
 </head>
 <body>
         <div>
-        <img src="картинка/photo_2025-10-16_17-12-35.jpg" alt="" class="car1">
+        <img src="photo_2025-10-16_17-12-35.jpg" alt="" class="car1">
     </div>
     <div class="gla">
         <a href="Модел.html" class="si1">Модел</a>
